Aligned text correctly. Ready to merge for now.

--- a/stylesheets/frontPage.css
+++ b/stylesheets/frontPage.css
@@ -44,11 +44,17 @@ nav {
     border: 1px solid black;
 }
 
+
 .menu-items a {
     text-decoration: none;
     color: black;
     padding: 10px;
     border-bottom: 1px solid black;
+    transition: 0.3s;
+}
+
+.menu-items a:hover {
+    background-color: rgb(85, 142, 206);
 }
 
 .menu-items a:last-child {
@@ -66,20 +72,11 @@ nav {
 }
 
 .text-box {
+    flex: 1;
     align-items: center;
     text-align: center;
-    margin-bottom: 40px;
 }
 
-.photo {
-    width: 300px;
-    height: 300px;
-    border-radius: 20%;
-    object-fit: cover;
-    border-style: groove;
-    border-color: black;
-    
-}
 
 .title {
     font-size: xx-large;
@@ -90,7 +87,11 @@ nav {
 }
 
 .info-box {
+    display: flex;
     width: 500px;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
 }
 
 .center-box {
@@ -103,25 +104,23 @@ nav {
     padding-bottom: 40px
 }
 
+
+.photo {
+    width: 300px;
+    height: 300px;
+    border-radius: 20%;
+    object-fit: cover;
+    border-style: groove;
+    border-color: black;
+}
+
 .photo-text {
     margin: 0;
     font-size: smaller;
 }
 
-button {
-    cursor: pointer;
-    padding: 20px 40px 20px 40px;
-    border-style: solid;
-    border-color: rgb(85, 142, 206);
-    background-color: rgb(85, 142, 206);
-    border-radius: 10px;
-    font-family: Oswald;
-    font-size: 40px;
-    transition: border-color 0.3s;
-    
+@media screen and (max-width: 768px) {
+    .center-box {
+        flex-direction: column;
+    }
 }
-
-button:hover {
-    border-color: black;
-}
-
